content/en/docs/corda-os/1.0/_index.md
---
aliases:
- /releases/release-V1.0/index.html
date: '2020-01-08T09:59:25Z'
menu:
  versions:
    weight: 590
project: corda-os
section_menu: corda-os-1-0
title: Corda OS 1.0
version: '1.0'
---


# Welcome to Corda !

[Corda](https://www.corda.net/) is a blockchain-inspired open source distributed ledger platform. If you’d like a
quick introduction to distributed ledgers and how Corda is different, then watch this short video:

<embed>
<iframe src="https://player.vimeo.com/video/205410473" width="640" height="360" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true"></iframe>


</embed>


Want to see Corda running? Download our demonstration application [DemoBench](https://www.corda.net/downloads/) or follow our [quickstart guide](quickstart-index.md).

If you want to start coding on Corda, then familiarise yourself with the [key concepts](key-concepts.md), then read our [Hello, World! tutorial](hello-world-index.md). For the background behind Corda, read the non-technical [introductory white paper](/en/pdf/corda-introductory-whitepaper.pdf) or for more detail, the [technical white paper](/en/pdf/corda-technical-whitepaper.pdf).

If you have questions or comments, then get in touch with us either on [Slack](https://slack.corda.net/), [Discourse](https://discourse.corda.net/), or write a question on [stackoverflow](https://stackoverflow.com/questions/tagged/corda) .

We look forward to seeing what you can do with Corda!





* [Quickstart](quickstart-index.md)
* [Key concepts](key-concepts.md)
* [Building a CorDapp](building-a-cordapp-index.md)
* [Corda nodes](corda-nodes-index.md)
* [Corda networks](corda-networks-index.md)
* [Tutorials](tutorials-index.md)
* [Tools](tools-index.md)
* [Node internals](node-internals-index.md)
* [Component library](component-library-index.md)
* [Release process](release-process-index.md)
* [Frequently asked questions](faq.md)
* [Troubleshooting](troubleshooting.md)
* [Other](other-index.md)
* [Glossary](glossary.md)



