content/en/docs/corda-os/3.1/_index.md
---
aliases:
- /releases/release-V3.1/index.html
date: '2020-01-08T09:59:25Z'
menu:
  versions:
    weight: 290
project: corda-os
section_menu: corda-os-3-1
title: Corda OS 3.1
version: '3.1'
---


# Welcome to Corda !

[Corda](https://www.corda.net/) is a blockchain-inspired open source distributed ledger platform. If you’d like a
quick introduction to distributed ledgers and how Corda is different, then watch this short video:

<embed>
<iframe src="https://player.vimeo.com/video/205410473" width="640" height="360" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true"></iframe>


</embed>


Want to see Corda running? Download our demonstration application [DemoBench](https://www.corda.net/downloads/) or
follow our [quickstart guide](quickstart-index.md).

If you want to start coding on Corda, then familiarise yourself with the [key concepts](key-concepts.md), then read
our [Hello, World! tutorial](hello-world-introduction.md). For the background behind Corda, read the non-technical
[introductory white paper](/en/pdf/corda-introductory-whitepaper.pdf) or for more detail, the [technical white paper](/en/pdf/corda-technical-whitepaper.pdf).

If you have questions or comments, then get in touch on [Slack](https://slack.corda.net/) or write a question on
[Stack Overflow](https://stackoverflow.com/questions/tagged/corda) .

We look forward to seeing what you can do with Corda!

{{< note >}}
You can read this site offline. Either [download the PDF](_static/corda-developer-site.pdf) or download the Corda source code, run `gradle buildDocs` and you will have
a copy of this site in the `docs/build/html` directory.

{{< /note >}}





* [Quickstart](quickstart-index.md)
* [Key concepts](key-concepts.md)
* [CorDapps](building-a-cordapp-index.md)
* [Corda nodes](corda-nodes-index.md)
* [Corda networks](corda-networks-index.md)
* [Tutorials](tutorials-index.md)
* [Tools](tools-index.md)
* [Node internals](node-internals-index.md)
* [Component library](component-library-index.md)
* [Release process](release-process-index.md)
* [Frequently asked questions](faq.md)
* [Troubleshooting](troubleshooting.md)
* [Other](other-index.md)
* [Glossary](glossary.md)



